--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,23 +5,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.hoingu3.ui.activity.HomeActivity">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/img_voz"
-        android:textStyle="bold"
-        android:textSize="24sp"
-        android:textAllCaps="true"
-        android:textColor="@color/md_blue_700"
-        android:layout_centerHorizontal="true"
-        android:text="Hỏi ngu 3"
-        android:layout_marginBottom="20dp"/>
-    <ImageView
-        android:id="@+id/img_voz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_voz_ok"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:textStyle="bold"
+            android:textSize="24sp"
+            android:textAllCaps="true"
+            android:textColor="@color/md_blue_700"
+            android:layout_centerHorizontal="true"
+            android:text="Hỏi ngu 3"
+            android:layout_marginBottom="20dp"/>
+        <ImageView
+            android:id="@+id/img_voz"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_voz_ok"/>
+
+        <Button
+            android:id="@+id/btn_play"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="12dp"
+
+            android:text="@string/str_choi_ngay"
+            android:textColor="@color/md_white"
+            android:background="@drawable/bg_button_orange_700"/>
+    </LinearLayout>
+
 </RelativeLayout>
